quick spacing fix

--- a/public/stylesheets/personal.css
+++ b/public/stylesheets/personal.css
@@ -18,7 +18,7 @@ body {
 
 h4 {
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 
 h5 {
@@ -50,7 +50,7 @@ form input {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 80%;
+    width: 60%;
     padding: 20px;
     text-align: center;
   }
